# f-framework

./: .gitignore  .gitmodules  CMakeLists.txt  mintty.exe.stackdump  static-f-library.sln
examples/: CMakeLists.txt  demo.cpp  test.cpp
f-library/: f-library.vcxproj  f-library.vcxproj.filters
f-library-demo-client/: f-library-demo-client.vcxproj  f-library-demo-client.vcxproj.filters
f-library-demo-client/headers/: window.h
f-library-demo-client/src/: main.cpp  window.cpp
f-library-demo-client/x64/Release/f-librar.26f9ab3c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  f-library-demo-client.lastbuildstate  f-library-demo-client.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
f-library/headers/: DataTypes.h  FLibCore.h  Layer.h  Network.h  Neuron.h  activations.h  backpropagation.h  debug.h  propagation.h  utils.h
f-library/src/: Layer.cpp  Network.cpp  Neuron.cpp  activations.cpp  backpropagation.cpp  loss.cpp  utils.cpp
f-library/x64/Release/f-library.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
headers/: Cache.h  HyperParameters.h  Layer.h  Network.h  Neuron.h  activations.h  loss.h  propagation.h
src/: CMakeLists.txt  Cache.cpp  Layer.cpp  Layer.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  activations.cpp  activations.h  loss.cpp  loss.h  propagation.cpp  propagation.h  random.cpp  random.h  test.cpp
tests/: CMakeLists.txt  Layer.test.cpp  Neuron.test.cpp  loss.test.cpp  propagation.test.cpp
